--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mojir/lits": "file:../lits",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
