--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mojir/lits": "file:../lits",
+    "@vueuse/core": "^11.1.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
