--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mojir/lits": "file:../lits",
+    "@nuxt/icon": "^1.6.1",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
