--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/test-utils": "^3.14.4",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^11.1.0",
