--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "dependencies": {
     "@mojir/lits": "1.2.0",
     "@nuxt/icon": "^1.6.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.454.0",
     "nuxt": "^3.13.2",
+    "shadcn-nuxt": "^0.10.4",
+    "tailwind-merge": "^2.5.4",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -34,6 +38,7 @@
     "@vueuse/nuxt": "^11.1.0",
     "happy-dom": "^15.7.4",
     "playwright-core": "^1.48.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4"
   }
