--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.454.0",
     "nuxt": "^3.13.2",
+    "radix-vue": "^1.9.8",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.5.4",
     "vue": "latest",
