--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mojir/lits": "1.2.0",
     "@nuxt/icon": "^1.6.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.454.0",
     "nuxt": "^3.13.2",
