--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mojir/lits": "1.2.0",
     "@nuxt/icon": "^1.6.1",
+    "@nuxthub/core": "^0.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.454.0",
@@ -42,6 +43,7 @@
     "playwright-core": "^1.48.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.4",
+    "wrangler": "^3.84.1"
   }
 }
