--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.1",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/color-mode": "^3.5.2",
