--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxthub/core": "^0.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3-format": "^3.1.0",
     "lucide-vue-next": "^0.454.0",
     "nuxt": "^3.13.2",
     "radix-vue": "^1.9.8",
@@ -38,6 +39,7 @@
     "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@types/d3-format": "^3.0.4",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^11.1.0",
     "happy-dom": "^15.7.4",
