Add @vueuse/core and @nuxtjs/device dependencies to project

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@mojir/lits": "1.2.2-alpha.4",
     "@nuxt/icon": "^1.6.1",
     "@nuxthub/core": "^0.8.4",
+    "@nuxtjs/device": "^3.2.4",
+    "@vueuse/core": "^11.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-format": "^3.1.0",
@@ -41,7 +43,7 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/d3-format": "^3.0.4",
     "@vue/test-utils": "^2.4.6",
-    "@vueuse/nuxt": "^11.1.0",
+    "@vueuse/nuxt": "^11.2.0",
     "happy-dom": "^15.7.4",
     "playwright-core": "^1.48.2",
     "tailwindcss-animate": "^1.0.7",
