--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint . --fix",
     "typecheck": "nuxt typecheck",
     "clean": "nuxt cleanup"
@@ -41,6 +42,7 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/d3-format": "^3.0.4",
+    "@vitest/coverage-v8": "^2.1.6",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^15.7.4",
     "playwright-core": "^1.48.2",
