--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@vee-validate/zod": "^4.14.7",
     "@vueuse/core": "^12.0.0",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-format": "^3.1.0",
@@ -37,6 +38,7 @@
     "tailwind-merge": "^2.5.4",
     "vee-validate": "^4.14.7",
     "vue": "latest",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "latest",
     "zod": "^3.24.0"
   },
@@ -46,6 +48,7 @@
     "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@types/chart.js": "^2.9.41",
     "@types/d3-format": "^3.0.4",
     "@vitest/coverage-v8": "^2.1.6",
     "@vue/test-utils": "^2.4.6",
