--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-format": "^3.1.0",
-    "d3-time-format": "^4.1.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "lucide-vue-next": "^0.474.0",
     "nuxt": "^3.15.4",
     "radix-vue": "^1.9.8",
@@ -51,7 +52,6 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/chart.js": "^2.9.41",
     "@types/d3-format": "^3.0.4",
-    "@types/d3-time-format": "^4.0.3",
     "@vitest/coverage-v8": "^3.0.4",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^16.7.2",
