--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest",
+    "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --fix",
     "lint:no-fix": "eslint .",
     "typecheck": "nuxt typecheck",
-    "clean": "nuxt cleanup"
+    "clean": "nuxt cleanup",
+    "check": "npm run lint && npm run typecheck && npm run test"
   },
   "dependencies": {
     "@mojir/lits": "1.2.2-alpha.7",
