--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "check:no-fix": "npm run lint:no-fix && npm run typecheck && npm run test"
   },
   "dependencies": {
-    "@mojir/lits": "1.2.2-alpha.7",
+    "@mojir/lits": "2.0.8",
     "@nuxt/icon": "^1.6.1",
     "@nuxthub/core": "^0.8.4",
     "@nuxtjs/device": "^3.2.4",
