--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@mojir/lits": "2.1.8",
+    "@mojir/pretty-pi": "0.0.8",
     "@nuxt/icon": "^1.6.1",
     "@nuxthub/core": "^0.8.4",
     "@nuxtjs/device": "^3.2.4",
