--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 9900",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -26,7 +26,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@mojir/lits": "2.1.25",
+    "@mojir/lits": "2.1.27",
     "@mojir/pretty-pi": "0.0.12",
     "@nuxt/icon": "^1.6.1",
     "@nuxthub/core": "^0.8.4",
